--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Weather Forcast</h1>
+    <h1>Weather Forcast</h1>
+    <div class="container">     
         <div class="box">
-            <input type="text" class="city" id ="city" placeholder="Enter City name..." required>
-            <button class="but" id="but" type="submit">Click here</button>
+            <img src="" alt="">
+            <div class="input_box">
+                <input type="text" class="city" id ="city" placeholder="Enter City name..." required>
+                <button class="but" id="but" type="submit">Click here</button>
+            </div>
             <div class="result" id="result">
             </div>
         </div>
