--- a/index.html
+++ b/index.html
@@ -13,7 +13,25 @@
             <img src="" alt="">
             <div class="input_box">
                 <input type="text" class="city" id ="city" placeholder="Enter City name..." required>
-                <button class="but" id="but" type="submit">Click here</button>
+                <button class="but" id="buttonOne" type="submit">Click here</button>
+            </div>
+            <div class="result" id="result">
+            </div>
+        </div>
+        <div class="box">
+            <img src="" alt="">
+            <div class="input_box">
+                <input type="text" class="city" id ="city" placeholder="Enter City name..." required>
+                <button class="but" id="buttonOne" type="submit">Click here</button>
+            </div>
+            <div class="result" id="result">
+            </div>
+        </div>
+        <div class="box">
+            <img src="" alt="">
+            <div class="input_box">
+                <input type="text" class="city" id ="city" placeholder="Enter City name..." required>
+                <button class="but" id="buttonOne" type="submit">Click here</button>
             </div>
             <div class="result" id="result">
             </div>
